--- a/work/work.csproj
+++ b/work/work.csproj
@@ -57,6 +57,9 @@
     </ApplicationDefinition>
     <Compile Include="AnimationUtils.cs" />
     <Compile Include="Board.cs" />
+    <Compile Include="Pages\AI.xaml.cs">
+      <DependentUpon>AI.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\HistoryPage.xaml.cs">
       <DependentUpon>HistoryPage.xaml</DependentUpon>
     </Compile>
@@ -76,6 +79,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\AI.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\HistoryPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
