feat/新增ai对战选择难度，平局提示以及结束后无法落子

--- a/work/work.csproj
+++ b/work/work.csproj
@@ -70,6 +70,9 @@
       <DependentUpon>PVP.xaml</DependentUpon>
     </Compile>
     <Compile Include="Utils.cs" />
+    <Compile Include="Utilwindows\ChooseDifficultyWindow.xaml.cs">
+      <DependentUpon>ChooseDifficultyWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -95,6 +98,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\PVP.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Utilwindows\ChooseDifficultyWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
