feat/插入历史记录完成

--- a/work/work.csproj
+++ b/work/work.csproj
@@ -61,6 +61,7 @@
     <Compile Include="AnimationUtils.cs" />
     <Compile Include="APIService.cs" />
     <Compile Include="Board.cs" />
+    <Compile Include="Models\History.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Pages\AI.xaml.cs">
       <DependentUpon>AI.xaml</DependentUpon>
