feat/长轮询实现对战功能实现

--- a/work/work.csproj
+++ b/work/work.csproj
@@ -62,6 +62,7 @@
     <Compile Include="APIService.cs" />
     <Compile Include="Board.cs" />
     <Compile Include="Models\History.cs" />
+    <Compile Include="Models\Msg.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Pages\AI.xaml.cs">
       <DependentUpon>AI.xaml</DependentUpon>
