--- a/work/work.csproj
+++ b/work/work.csproj
@@ -61,6 +61,7 @@
     <Compile Include="AnimationUtils.cs" />
     <Compile Include="APIService.cs" />
     <Compile Include="Board.cs" />
+    <Compile Include="Models\CanvasShape.cs" />
     <Compile Include="Models\History.cs" />
     <Compile Include="Models\Msg.cs" />
     <Compile Include="Models\User.cs" />
