添加选中动画 优化结算界面

--- a/work/work.csproj
+++ b/work/work.csproj
@@ -198,5 +198,11 @@
   <ItemGroup>
     <Resource Include="Images\WHU.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\WIN.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\LOSS.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
