--- a/work/work.csproj
+++ b/work/work.csproj
@@ -195,9 +195,6 @@
     <Resource Include="Images\winningImage.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\loseImage.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\WHU.png" />
   </ItemGroup>
   <ItemGroup>
@@ -205,6 +202,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\LOSS.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\default.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\black.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
